# token_standard

./: .gitignore  Cargo.toml  NOTICE  README.md
.github/workflows/: Basic.yml  Release.yml
contracts/token-caller/: Cargo.toml  README.md
contracts/token-caller/.cargo/: config
contracts/token-caller/examples/: schema.rs
contracts/token-caller/schema/: token-caller.json
contracts/token-caller/schema/raw/: execute.json  query.json  response_to_on_f_t_received.json
contracts/token-caller/src/: contract.rs  error.rs  msg.rs
contracts/token-standard/: Cargo.toml
contracts/token-standard/.cargo/: config
contracts/token-standard/examples/: schema.rs
contracts/token-standard/schema/: token-standard.json
contracts/token-standard/schema/raw/: execute.json  instantiate.json  query.json
contracts/token-standard/src/: contract.rs  error.rs  event.rs  lib.rs  msg.rs  state.rs
examples/: schema.rs
schema/: execute_msg.json  instantiate_msg.json  query_msg.json  token-standard.json
schema/raw/: execute.json  query.json  response_to_info.json
scripts/: optimizer.sh  package.json  test.js
src/: contract.rs  error.rs  event.rs  lib.rs  msg.rs  state.rs
