[package]
name = "token-caller"
version = "0.1.0"
authors = ["zemyblue <zemyblue@users.noreply.github.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[package.metadata.scripts]
optimize = """docker run --rm -v "$(pwd)":/code \
  --mount type=volume,source="$(basename "$(pwd)")_cache",target=/code/target \
  --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
  cosmwasm/rust-optimizer:0.13.0
"""

[dependencies]
cosmwasm-std    = "1.1.9"
cosmwasm-storage = "1.1.9"
cosmwasm-schema = "1.1.9"
cw-storage-plus = "1.1.0"
cw2 = "1.1.0"
schemars = "0.8.12"
serde = { version = "1.0.167", default-features = false, features = ["derive"] }
thiserror = "1.0.43"
token-standard = { path = "../token-standard"}

[dev-dependencies]
cosmwasm-schema = "1.1.9"
cw-multi-test = "0.16.2"

[patch.crates-io]
cosmwasm-std = { git = "https://github.com/Finschia/cosmwasm", tag = "v1.1.9-0.7.0" }
cosmwasm-storage = { git = "https://github.com/Finschia/cosmwasm", tag = "v1.1.9-0.7.0" }
cosmwasm-schema = { git = "https://github.com/Finschia/cosmwasm", tag = "v1.1.9-0.7.0" }
